--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
       <div class="modal">
         <button class="close-form-btn" type="submit">
           <svg class="cross-icon" width="12" height="12">
-            <use href="/images/icons.svg#icon-cross"></use>
+            <use href="./images/icons.svg#icon-cross"></use>
           </svg>
         </button>
         <p class="form-title">Order Form</p>
@@ -548,7 +548,7 @@
               type="tel"
               name="user_phone"
               class="form-input"
-              placeholder="+38(0_ _) _ _ _   _ _   _ _"
+              placeholder="+38 (0_ _) _ _ _   _ _   _ _"
               id="user_phone"
               required
             />
