--- a/index.html
+++ b/index.html
@@ -17,6 +17,18 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
+    />
+
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
@@ -79,27 +91,91 @@
             <button class="main-button-start" type="button">Order Now</button>
           </div>
           <div class="salad-border">
-            <picture>
-              <source
-                srcset="
-                  ./images/main-dish-dsk.png    1x,
-                  ./images/main-dish-dsk-2x.png 2x
-                "
-                media="(min-width: 1280px)"
-              />
-              <source
-                srcset="
-                  ./images/main-dish-tab.png    1x,
-                  ./images/main-dish-tab-2x.png 2x
-                "
-                media="(min-width: 768px)"
-              />
-              <img
-                class="start-salad"
-                src="images/main-dish-tab.png"
-                alt="plate of salad"
-              />
-            </picture>
+            <div class="single-item">
+              <div>
+                <picture>
+                  <source
+                    srcset="
+                      ./images/main-dish-dsk.png    1x,
+                      ./images/main-dish-dsk-2x.png 2x
+                    "
+                    media="(min-width: 1280px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/main-dish-tab.png    1x,
+                      ./images/main-dish-tab-2x.png 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <img
+                    class="start-salad"
+                    src="images/main-dish-tab.png"
+                    alt="plate of salad"
+                  />
+                </picture>
+              </div>
+              <div>
+                <picture>
+                  <source
+                    srcset="
+                      ./images/main-dish2-dsk.png    1x,
+                      ./images/main-dish2-dsk-2x.png 2x
+                    "
+                    media="(min-width: 1280px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/main-dish2-tab.png    1x,
+                      ./images/main-dish2-tab-2x.png 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <img
+                    class="start-salad"
+                    src="images/main-dish2-tab.png"
+                    alt="meat balls"
+                  />
+                </picture>
+              </div>
+              <div>
+                <picture>
+                  <source
+                    srcset="
+                      ./images/main-dish3-dsk.png    1x,
+                      ./images/main-dish3-dsk-2x.png 2x
+                    "
+                    media="(min-width: 1280px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/main-dish3-tab.png    1x,
+                      ./images/main-dish3-tab-2x.png 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <img
+                    class="start-salad"
+                    src="images/main-dish3-tab.png"
+                    alt="plate of healthy food"
+                  />
+                </picture>
+              </div>
+            </div>
+            <div class="click-wrap-left">
+              <button class="slick-prev">
+                <svg width="12" height="22">
+                  <use href="./images/icons.svg#icon-arrow-left"></use>
+                </svg>
+              </button>
+            </div>
+            <div class="click-wrap-right">
+              <button class="slick-next">
+                <svg class="next" width="12" height="22">
+                  <use href="./images/icons.svg#icon-arrow-right"></use>
+                </svg>
+              </button>
+            </div>
           </div>
         </div>
       </section>
@@ -568,5 +644,19 @@
         </form>
       </div>
     </div>
+
+    <script
+      type="text/javascript"
+      src="//code.jquery.com/jquery-1.11.0.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="//code.jquery.com/jquery-migrate-1.2.1.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
+    ></script>
+    <script src="./js/slider.js"></script>
   </body>
 </html>
